<resources>
    <!-- Application -->
    <string name="app_name">SatAppMessenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <!-- Navigation titles -->
    <string name="menu_satellite">Info Sat</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_phone">Phone</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_exit">Exit</string>
    <!-- Login title -->
    <string name="Password">Password</string>
    <string name="Email">E-mail</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">registration</string>
    <string name="title_activity_login">Welcome in SORM</string>
    <string name="quit">quit</string>
    <!-- Pager title -->
    <string name="UpdateDeleteAccount">Обновление будет содержать возможность удаление аккаунта через клиентское приложение. Пока обращайся через feedback</string>
    <string name="tv">TV</string>
    <string name="beacon">beacon</string>
    <string name="coverage">coverage</string>
    <string name="video">video</string>
    <string name="info">info</string>

    <!-- Feedback title -->
    <string name="send">send</string>
    <string name="feedback">feedback</string>
    <string name="write_feedback">write feedback please</string>
    <string name="feedback_e_mail">e-mail(name) user</string>
    <string name="e_mail">android@gmail.com</string>
    <string name="no_select">No select</string>
    <string name="input_message">Input message</string>
    <string name="preference_theme">Theme</string>
    <string name="default_theme_light">light</string>
    <string name="my_color_message">my_color_message</string>
    <string name="your_color_message">your_color_message</string>
    <string name="theme">theme</string>

    <!-- Tabs ViewPager2 title -->

    <string-array name="typeTV">
        <item>Frequency</item>
        <item>Speed</item>
        <item>Pol</item>
        <item>Device</item>
    </string-array>

    <string-array name="typeBeacon">
        <item>Frequency</item>
        <item>Pol</item>
    </string-array>

</resources>