<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_satellite"
            android:icon="@drawable/ic_baseline_satellite_24"
            android:title="@string/menu_satellite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/ic_baseline_phone_24"
            android:title="@string/menu_phone" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_verified_user_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>
</menu>