<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.login.LoginFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/width_progressbar"
        android:layout_height="@dimen/height_progressbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/email_password_fields"
            style="@style/LoginLinearLayoutStyle">

            <EditText
                android:id="@+id/field_email"
                style="@style/LoginEditStyle"
                android:hint="@string/Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                style="@style/LoginEditStyle"
                android:hint="@string/Password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            style="@style/LoginLinearLayoutStyle"
            android:layout_below="@+id/email_password_fields">

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/LoginButtonStyle"
                android:text="@string/sign_in"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/email_create_account_button"
                style="@style/LoginButtonStyle"
                android:text="@string/create_account"
                app:backgroundTint="@color/colorPrimary" />

        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>